--- a/DigitalCensus.Dotnet.Dal/DigitalCensus.Dotnet.Dal.csproj
+++ b/DigitalCensus.Dotnet.Dal/DigitalCensus.Dotnet.Dal.csproj
@@ -95,6 +95,10 @@
     <Compile Include="Migrations\201904301614570_InitialMgrtn.Designer.cs">
       <DependentUpon>201904301614570_InitialMgrtn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905031024462_CitizenUpdates.cs" />
+    <Compile Include="Migrations\201905031024462_CitizenUpdates.Designer.cs">
+      <DependentUpon>201905031024462_CitizenUpdates.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CitizenRepository.cs" />
@@ -115,6 +119,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201904301614570_InitialMgrtn.resx">
       <DependentUpon>201904301614570_InitialMgrtn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905031024462_CitizenUpdates.resx">
+      <DependentUpon>201905031024462_CitizenUpdates.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
